# irp6_robot

./: .gitignore  README.md  aktualizuj.bash  rosdep.yaml
ati3084/: CMakeLists.txt  package.xml
ati3084/src/: ATI3084.cpp  ATI3084.h
ati6284/: CMakeLists.txt  manifest.xml  package.xml
ati6284/src/: ATI6284.cpp  ATI6284.h
conveyor/: CMakeLists.txt  package.xml
conveyor/src/: ConveyorJ2M.cpp  ConveyorJ2M.h  ConveyorM2J.cpp  ConveyorM2J.h  ConveyorTransmission.h
data_export/: CMakeLists.txt  package.xml
data_export/src/: DataExport.cpp  DataExport.h
force_contol/: CMakeLists.txt  package.xml
force_contol/src/: ForceControlLaw.cpp  ForceControlLaw.h  ForceTrans.cpp  ForceTrans.h  ForceTransformation.cpp  ForceTransformation.h
force_sensor/: CMakeLists.txt  package.xml
force_sensor/src/: ForceSensor.cpp  ForceSensor.h
gravity_compensation/: CMakeLists.txt  package.xml
gravity_compensation/src/: GravityJointTorque.cpp  GravityJointTorque.h  GravityMotorCurrent.cpp  GravityMotorCurrent.h
hardware_interface/: CMakeLists.txt  CMakeLists.txt~  controllers.yaml  example.ops~  irp6.launch  manifest.xml  package.xml  package.xml~  sarkofag.launch  sarkofag.ops  sarkofag.ops~  sarkofag.xml  simple_trajectory.py  simple_trajectory.py~  update_monitor.py
hardware_interface/src/: CMakeLists.txt  CMakeLists.txt~  HardwareInterface.cpp  HardwareInterface.h  Irp6pmJ2M.h  Irp6pmTransmission.h  hi_moxa.cpp  hi_moxa.h  hi_moxa_combuf.h  irp6p_transmission.cpp  irp6p_transmission.h  irp6p_transmission_inv.cpp  irp6p_transmission_inv.h  nfv2_config.h  sarkofag_servo.cpp~  string_colors.h
hardware_interface_mw/: CMakeLists.txt  package.xml
hardware_interface_mw/src/: HardwareInterfaceMW.cpp  HardwareInterfaceMW.h  hi_moxa.cpp  hi_moxa.h  hi_moxa_combuf.h
hw_model/: CMakeLists.txt  package.xml
hw_model/src/: HwModel.cpp  HwModel.h
impedance_joint_control/: CMakeLists.txt  package.xml
impedance_joint_control/src/: ImpedanceJointTorque.cpp  ImpedanceJointTorque.h  ImpedanceMotorCurrent.cpp  ImpedanceMotorCurrent.h
irp6_bringup/: CMakeLists.txt  package.xml
irp6_bringup/config/: common-imports.ops  conv-hardware-inside.ops  conv-hardware.ops  conv-inside-add-scheme-block.ops  conv-inside-add-scheme-peer.ops  conv-inside-new.ops  conv-inside-p1.ops  conv-inside-pre-add-scheme-peer.ops  conv-inside-pre-start.ops  conv-inside-start.ops  conv-inside.ops  conv-nohardware-inside.ops  conv-nohardware.ops  conv.ops  haptic-inside.ops  irp6-conv-hardware.ops  irp6-conv-nohardware.ops  irp6-conv.ops  irp6-hardware.ops  irp6-inside-add-scheme-block.ops  irp6-inside-add-scheme-peer.ops  irp6-inside-pre-add-scheme-peer.ops  irp6-inside-pre-start.ops  irp6-inside-start.ops  irp6-new.ops  irp6-nohardware.ops  irp6-ot-hardware-inside.ops  irp6-ot-hardware.ops  irp6-ot-inside-add-scheme-block.ops  irp6-ot-inside-add-scheme-peer.ops  irp6-ot-inside-new.ops  irp6-ot-inside-pre-add-scheme-peer.ops  irp6-ot-inside-pre-start.ops  irp6-ot-inside-start.ops  irp6-ot-inside.ops  irp6-ot-new.ops  irp6-ot-nohardware-inside.ops  irp6-ot-nohardware.ops  irp6-ot.ops  irp6-p-hardware-inside.ops  (+17 more)
irp6_bringup/launch/: conv-hardware-csn.launch  conv-hardware-inside.launch  conv-hardware.launch  conv-inside.launch  conv-new.launch  conv-nohardware-inside.launch  conv-nohardware-new.launch  conv-nohardware.launch  conv.launch  haptic-inside.launch  irp6-common.launch  irp6-conv-hardware-new.launch  irp6-conv-hardware.launch  irp6-conv-nohardware-new.launch  irp6-conv-nohardware.launch  irp6-conv.launch  irp6-hardware-csn.launch  irp6-hardware-new.launch  irp6-hardware.launch  irp6-inside.launch  irp6-nohardware-new.launch  irp6-nohardware.launch  irp6-ot-camera.launch  irp6-ot-hardware-csn.launch  irp6-ot-hardware-inside.launch  irp6-ot-hardware-new.launch  irp6-ot-hardware.launch  irp6-ot-inside.launch  irp6-ot-new.launch  irp6-ot-nohardware-inside.launch  irp6-ot-nohardware-new.launch  irp6-ot-nohardware.launch  irp6-ot.launch  irp6-p-camera.launch  irp6-p-hardware-csn.launch  irp6-p-hardware-inside.launch  irp6-p-hardware-new.launch  irp6-p-hardware.launch  irp6-p-inside.launch  irp6-p-new.launch  (+7 more)
irp6_bringup/scripts/: circle.py  conveyor-csn.py  conveyor.py  force_control.py  irp6ot_tfg.py  irp6otm_force_control.py  irp6otm_multi_trajectory.py  irp6otm_synchro.py  irp6p_tfg.py  irp6pm_circle.py  irp6pm_force_control.py  irp6pm_front_position.py  irp6pm_joint_trajectory.py  irp6pm_multi_trajectory-csn.py  irp6pm_multi_trajectory.py  irp6pm_simple_trajectory.py  irp6pm_synchro.py  multi_trajectory.py  run_common.sh  simple_motor_trajectory.py  simple_trajectory.py  synchro.py
irp6_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
irp6_dashboard/scripts/: irp6_dashboard
irp6_description/: CMakeLists.txt  package.xml
irp6_description/meshes/: conveyor.3ds  link1.3ds  link2.3ds  link3.3ds  link4.3ds  link4.stlb  link5.3ds  link6.3ds
irp6_description/robots/: irp6p.urdf.xacro  irp6pboth.urdf.xacro
irp6_diagnostic/: CMakeLists.txt  package.xml
irp6_diagnostic/src/: Irp6Diagnostic.cpp  Irp6Diagnostic.h
irp6_force_sensor/: CMakeLists.txt  package.xml
irp6_force_sensor/src/: ATI3084.cpp  ATI3084.h  ATI6284.cpp  ATI6284.h  ForceSensor.cpp  ForceSensor.h
irp6_haptic/: CMakeLists.txt  haptic_start-new.py  haptic_start.py  haptic_stop-new.py  haptic_stop.py  package.xml
irp6_haptic/src/: Irp6Haptic.cpp  Irp6Haptic.h
irp6_kinematic/: CMakeLists.txt  package.xml
irp6_kinematic/src/: Irp6pForwardKinematic.cpp  Irp6pForwardKinematic.h  Irp6pInverseKinematic.cpp  Irp6pInverseKinematic.h  Irp6pKinematic.h
irp6_regulator/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  manifest.xml~  package.xml  package.xml~
irp6_regulator/src/: CMakeLists.txt  CMakeLists.txt~  IRp6Regulator.cpp  IRp6Regulator.h  Regulator.cpp  Regulator.h  regulator.cpp~  regulator.h~  regulator_sarkofag.cpp~  regulator_sarkofag.h~  sarkofag_regulator.cpp~
irp6_supervisor/: CMakeLists.txt  package.xml
irp6_supervisor/src/: ConvSupervisor.cpp  ConvSupervisor.h  (+4 more)
irp6otm/: CMakeLists.txt  package.xml
(+217 files in other folders)
