<package>
  <name>ati6284</name>
  <version>0.0.1</version>
  <description>ATI6284 FT sensor</description>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <license>BSD</license>

  <author email="konradb3@gmail.com">Konrad Banachowicz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend> 
  <build_depend>comedi</build_depend> 

  <run_depend>rtt_ros</run_depend> 

</package>
