<?xml version="1.0"?>
<package>
  <name>irp6_dashboard</name>
  <version>0.0.0</version>
  <description>The irp6_dashboard package to show irp6 status and interact with the irp6 robot using rqt</description>

  <maintainer email="tomrobotics@gmail.com">Tomasz Winiarski</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>irpos</run_depend>


 <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>