<package>
  <name>irp6_diagnostic</name>
  <version>2.6.0</version>
  <description>diagnostic message of irp6 robot</description>
  <maintainer email="tomrobotics@gmail.com">Tomasz Winiarski</maintainer>

  <license>BSD</license>

  <author email="tomrobotics@gmail.com">Tomasz Winiarski</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  
  <export>
    <rtt_plugin_depend>rtt_ros</rtt_plugin_depend>
    <rtt_ros>
        <plugin_depend>rtt_diagnostic_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
